[shaders] Fix styling on small screens.
Bug: skia:12756
Reviewed-on: https://skia-review.googlesource.com/c/buildbot/+/490217
Commit-Queue: Joe Gregorio <jcgregorio@google.com>

--- a/shaders/pages/main.scss
+++ b/shaders/pages/main.scss
@@ -4,3 +4,7 @@ html {
   padding: 0;
   background: var(--background);
 }
+
+body {
+  display: grid;
+}
